--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "dotenv>=0.9.9",
     "httpx>=0.28.1",
     "anthropic>=0.49.0",
+    "braintrust>=0.0.185",
+    "autoevals>=0.0.121",
 ]
