--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mod-llm"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.8",
     "dotenv>=0.9.9",
@@ -17,4 +17,5 @@ dependencies = [
     "datasets>=3.3.2",
     "matplotlib>=3.10.1",
     "transformers>=4.49.0",
+    "vllm>=0.7.3",
 ]
